updated server port for deployment

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "spotifyviz",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "startserver": "./node_modules/.bin/node-dev server.js"
   },
