--- a/front/package.json
+++ b/front/package.json
@@ -16,5 +16,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://gitriley.github.io/spotify-react"
+  "homepage": "https://gitriley.github.io/everlysn"
 }
