--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,9 @@
     "gh-pages": "^1.2.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-redux": "^5.1.0",
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
