--- a/front/package.json
+++ b/front/package.json
@@ -8,7 +8,9 @@
     "react-dom": "^16.3.2",
     "react-redux": "^5.1.0",
     "react-scripts": "1.1.4",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "predeploy": "npm run build",
